# temporal-insa

./: .gitignore  README.md  pyproject.toml  web_design.html
classification/Learning-Shapelets-main/: test.py
classification/boss/: test.py
classification/learning-shapelets/: test.py
frontend/: angular.json  package-lock.json
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/app/service/: data-service.service.ts
hydra-main/code/: test.py
minirocket-main/code/: test.py
rocket-master/code/: dataset_names.txt
temporalinsa/: db.sqlite3  main.py
temporalinsa/classification/: classify.py  getClassifier.py
temporalinsa/classification/LearningShapeletsmain/: classifyLearningShapelets.py
temporalinsa/classification/boss/: classifyBoss.py  test.py
temporalinsa/classification/hydra/code/: classifyHydra.py  test.py
temporalinsa/classification/minirocket/code/: classifyMiniRocket.py  test.py
temporalinsa/classification/rocket/code/: classifyRocket.py  reproduce_experiments_ucr.py
temporalinsa/preprocess/: process_dataset.py
temporalinsa/result/: requestExperiment.py
temporalinsa/temporal/: asgi.py  settings.py  urls.py  wsgi.py
temporalinsa/webapp/: admin.py  models.py  urls.py  views.py
temporalinsa/webapp/migrations/: 0001_initial.py  0002_experiment_name.py  0003_result.py  0004_experiment_classifier_experiment_scaler.py  0005_classifierparameters.py  0006_alter_experiment_id.py
temporalinsa/webapp/templates/webapp/: classify.html  documentation.html  home.html  importation.html  (+4 more)
tempres/: results_ucr.csv
(+8 files in other folders)
